static/css/main.css
body {
    background-color: black;
  overflow-y: hidden;
}
#background {
    height: 100vh;
    width: 100%;
    background-image: url("/static/img/background.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    position: fixed;
    filter: blur(3px);
    transform: scale(1.02);
    z-index: -1;

}

#box{
    position: relative;
    width: 100vw;
    height: 100vh;

}

#boxChild{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#view-page .row {
  height: 100%;
}

.view {
  margin-top: 1vh;
  color: black;
}

#map-container {
  display: flex;
  min-height: 100%;
  flex-direction: column;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance:textfield;
}

nav ul {
    list-style: none;
    text-align: center;
  }
  nav ul li {
    display: inline-block;
  }
  nav ul li a {
    display: block;
    padding: 15px;
    text-decoration: none;
    color: #aaa;
    font-weight: 800;
    text-transform: uppercase;
    
  }
  nav ul li a,
  nav ul li a:after,
  nav ul li a:before {
    transition: all .5s;
  }
  nav ul li a:hover {
    color: #555;
  }
  
  
  /* stroke */
  nav.stroke ul li a,
  nav.fill ul li a {
    position: relative;
  }
  nav.stroke ul li a:after,
  nav.fill ul li a:after {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    width: 0%;
    content: '.';
    color: transparent;
    background: #aaa;
    height: 1px;
  }
  nav.stroke ul li a:hover:after {
    width: 100%;
  }
  
  nav.fill ul li a {
    transition: all 0.75s;
  }
  
  nav.fill ul li a:after {
    text-align: left;
    content: '.';
    margin: 0;
    opacity: 0;
  }
  nav.fill ul li a:hover {
    color: #fff;
    z-index: 1;
  }
  nav.fill ul li a:hover:after {
    z-index: -10;
    animation: fill 0.75s forwards;
    -webkit-animation: fill 0.75s forwards;
    -moz-animation: fill 0.75s forwards;
    opacity: 1;
  }
  
  /* Circle */
  nav.circle ul li a {
    position: relative;
    overflow: hidden;
    z-index: 1;
  }
  nav.circle ul li a:after {
    display: block;
    position: absolute;
    margin: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    content: '.';
    color: transparent;
    width: 1px;
    height: 1px;
    border-radius: 50%;
    background: transparent;
  }
  nav.circle ul li a:hover:after {
    -webkit-animation: circle 1.5s ease-in forwards;
  }
  
  /* SHIFT */
  nav.shift ul li a {
    position:relative;
    z-index: 1;
  }
  nav.shift ul li a:hover {
    color: #91640F;
  }
  nav.shift ul li a:after {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    width: 100%;
    height: 1px;
    content: '.';
    color: transparent;
    background: #F1C40F;
    visibility: none;
    opacity: 0;
    z-index: -1;
  }
  nav.shift ul li a:hover:after {
    opacity: 1;
    visibility: visible;
    height: 100%;
  }
  
  
  
  /* Keyframes */
  @-webkit-keyframes fill {
    0% {
      width: 0%;
      height: 1px;
    }
    50% {
      width: 100%;
      height: 1px;
    }
    100% {
      width: 100%;
      height: 100%;
      background: #333;
    }
  }
  
  /* Keyframes */
  @-webkit-keyframes circle {
    0% {
      width: 1px;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      margin: auto;
      height: 1px;
      z-index: -1;
 
      border-radius: 100%;
    }
    100% {
      background: black;
      height: 5000%;
      width: 5000%;
      z-index: -1;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      margin: auto;
      border-radius: 0;
    }
  }

